<resources>
    <string name="app_name">bus pass</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="title_home">Home</string>
    <string name="title_sell">Sell</string>
    <string name="title_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">home</string>
    <string name="View_Pass"> View Pass </string>
    <string name="title_Profile">Profile</string>
    <string name="title_activity_item_detail_host">Item Detail Host Activity</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />
    <string name="personal_information">Personal infromation</string>
    <string name="edit">edit</string>
    <string name="update">update</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone_no">Phone no</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="city">city</string>
    <string name="state">state</string>
    <string name="Address">Address</string>

    <string name="bus_type">Choose a Bus Type</string>
    <string-array name="bus_type">
        <!--<item>Choose Bus Type</item>-->
        <item>BRTS</item>
        <item>AMTS</item>
        <item>ST</item>
    </string-array>
    <string name="pass_type">Choose a Pass Type</string>
    <string-array name="pass_type">
        <!--<item>Choose Pass Type</item>
        -->
        <item>Student</item>
        <item>Employee</item>
    </string-array>
    <string name="period">Choose a Period</string>
    <string-array name="period">
        <!--<item>Choose Period</item>-->
        <item>1 month</item>
        <item>3 month</item>
        <item>6 month</item>
        <item>1 year</item>
    </string-array>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="Name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="tab_second_1">Amts</string>
    <string name="tab_second_2">Brts</string>
    <string name="tab_second_3">St</string>
    <string name="title_activity_timetable">time_table</string>
    <string name="title_activity_tab">tab</string>
    <string name="time_table">Time Table</string>

</resources>